2005-05-09  James Henstridge  <james@jamesh.id.au>

	* modulesets/bootstrap.modules (libtool): update to 1.5.16.
	(gettext): update to 0.14.4.

2005-05-08  Murray Cumming <murrayc@murrayc.com>

	* modulesets/gnome-2.12.modules: glom: Depend on 
	iso-codes.

2005-05-06  Matthias Clasen <mclasen@redhat.com>

	* modulesets/gnome-2.12.modules: Add libmusicbrainz
	tarball module, and make totem depend on it.

	* modulesets/gnome-2.12.modules: Add iso-codes as 
	tarball module, and make epiphany depend on it.

2005-05-05  Murray Cumming <murrayc@murrayc.com>

	* modulesets/gnome-2.12.modules: glom: Depend on 
	gnome-python-extras, though it only needs pygda from there.

2005-04-26  Murray Cumming <murrayc@murrayc.com>

	* modulesets/gnome-2.12.modules: Added Inkscape.

2005-04-26  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome-2.12.modules (gnome-screensaver): add module.
	Patch from bug #301706.

2005-04-22  James Henstridge  <james@jamesh.id.au>

	* modulesets/bootstrap.modules (pkg-config): pass
	--enable-indirect-deps, since the change makes assumptions about
	library use that are not valid.

2005-04-22  Mark McLoughlin  <mark@skynet.ie>

	* modulesets/gnome-2.12.modules: (gnome-menus): require
	glib, intltool and gnome-common instead of gnome-vfs.

2005-04-21  Federico Mena Quintero  <federico@ximian.com>

	* modulesets/gnome-2.10.modules: Use gnome-2-10 for libgnomeui.

2005-04-14  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome-2.10.modules: Use gnome-2-10 for eog.

2005-04-14  James Henstridge  <james@jamesh.id.au>

	* modulesets/bootstrap.modules (pkg-config): update to 0.17.2 and
	remove the patch.

	* modulesets/bootstrap.modules (pkg-config): add patch to fix
	https://bugs.freedesktop.org/show_bug.cgi?id=3006, til new release
	comes out.

2005-04-13  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* modulesets/gcj.modules: add jg-common and libgconf-java modules.
	add java-gnome metamodule (patch from Jeffrey Morgan).
