@@ -1,5 +1,10 @@
 2005-05-09  James Henstridge  <james@jamesh.id.au>
 
+	* jhbuild/moduleset.py (load): allow "moduleset" in config file to
+	be a list of module sets, rather than just a single one.  Nothing
+	is done to ensure that the modulesets don't conflict.  This allows
+	you to use ['gnome-2.10', 'gtk28'] as a moduleset.
+
 	* modulesets/bootstrap.modules (libtool): update to 1.5.16.
 	(gettext): update to 0.14.4.
 
